@@ -355,6 +355,38 @@ set_albumName=<replaceable>album-name</replaceable></programlisting>
         <para>Multiple <varname>extrafield</varname> lines with different <varname><replaceable>fieldname</replaceable></varname> values can be used.</para>
       </sect4>
     </sect3>
+    <sect3 id="gallery-remote.protocol.cmd.move-album">
+      <title>Moving an album [since 2.7]</title>
+      <para>The <varname>move-album</varname> command asks the server to move an album to a new location within the photo gallery.</para>
+      <sect4>
+        <title>Context</title>
+	<para>A request with the <varname>login</varname> command must be made before the <varname>move-album</varname> command is used.</para>
+      </sect4>
+      <sect4>
+        <title>Form data</title>
+	<programlisting>
+cmd=move-album
+protocol_version=<replaceable>2.7</replaceable>
+set_albumName=<replaceable>source-album</replaceable>
+set_destalbumName=<replaceable>destination-album</replaceable></programlisting>
+        <itemizedlist spacing="compact">
+          <listitem>
+            <para><varname><replaceable>source-album</replaceable></varname> is the name of the album that you intend to move;</para>
+          </listitem>
+          <listitem>
+            <para><varname><replaceable>destination-album</replaceable></varname> is the name of the album that the <replaceable>source-album</replaceable> will be moved into, or 0 if the <replaceable>source-album</replaceable> should be moved to the root level;</para>
+	  </listitem>
+        </itemizedlist>
+      </sect4>
+      <sect4>
+        <title>Results</title>
+	<programlisting>
+#__GR2PROTO__
+status=<replaceable>result-code</replaceable>
+status_text=<replaceable>explanatory-text</replaceable></programlisting>
+        <para>If the <varname><replaceable>result-code</replaceable></varname> is equal to <link linkend="gallery-remote.protocol.retcodes"><varname>GR_STAT_SUCCESS</varname></link>, the album move succeeded.</para>
+      </sect4>
+    </sect3>
   </sect2>
   <sect2 id="gallery-remote.protocol.retcodes">
     <title>Appendix A: Response Status Codes</title>
@@ -427,6 +459,11 @@ set_albumName=<replaceable>album-name</replaceable></programlisting>
             <entry>403</entry>
             <entry>The file was received, but could not be processed or added to the album.</entry>
           </row>
+	  <row>
+	    <entry>GR_STAT_NO_WRITE_PERMISSION</entry>
+	    <entry>404</entry>
+	    <entry>No write permission to destination album.</entry>
+	  </row>
           <row>
             <entry>GR_STAT_NO_CREATE_ALBUM_PERMISSION</entry>
             <entry>501</entry>
