@@ -1,3 +1,8 @@
+2003-10-30 Chris Schwerdt <muti@afterglo.ws> 1.4.1-cvs-b200
+	* Added move-album command to gallery_remote2.php
+
+	* Added move-album to gallery remote protocol documentation.
+
 2003-10-29 Jens Tkotz <jens@peino.de> 1.4.1-cvs-b199
 
 	* Language: - Found some untranslated strings
